--- a/src/Fatn.Prototype/Fatn.Prototype.csproj
+++ b/src/Fatn.Prototype/Fatn.Prototype.csproj
@@ -16,4 +16,15 @@
       <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Protobuf Include="Protos\greet.proto">
+        <GrpcServices>Client</GrpcServices>
+        <Access>Public</Access>
+        <ProtoCompile>True</ProtoCompile>
+        <CompileOutputs>True</CompileOutputs>
+        <OutputDir>obj\Debug\net5.0\</OutputDir>
+        <Generator>MSBuild:Compile</Generator>
+      </Protobuf>
+    </ItemGroup>
+
 </Project>
