--- a/src/Fatn.Server/Fatn.Server.csproj
+++ b/src/Fatn.Server/Fatn.Server.csproj
@@ -6,11 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+      <ProjectReference Include="..\Fatn.Api\Fatn.Api.csproj" />
     </ItemGroup>
 
 </Project>
